--- a/Code/WeatherGuard/src/main/resources/fxml/TeacherView.fxml
+++ b/Code/WeatherGuard/src/main/resources/fxml/TeacherView.fxml
@@ -1,10 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.weatherboys.ui.TeacherViewController"
-            prefWidth="1280.0" prefHeight="720.0">
+<SplitPane dividerPositions="0.06856187290969899" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherboys.ui.TeacherViewController">
+<items>
+    <AnchorPane maxHeight="40.0" minHeight="40.0" minWidth="0.0" prefHeight="40.0" prefWidth="600.0" style="-fx-background-color: darkgray;">
+        <children>
 
-</AnchorPane>
+            <Line endX="928.0" startX="-100.0" strokeLineCap="ROUND" strokeWidth="2.0" />
+            <Label alignment="CENTER" layoutX="300.0" prefHeight="40.0" prefWidth="300.0" text="Welcome to Weather Guard" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS">
+                <font>
+                    <Font name="Trebuchet MS" size="21.0" />
+                </font>
+            </Label>
+        </children>
+    </AnchorPane>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="370.0" prefWidth="598.0">
+        <children>
+            <HBox prefHeight="555.0" prefWidth="900.0">
+                <children>
+                    <SplitPane dividerPositions="0.5" maxHeight="555.0" maxWidth="300.0" minHeight="555.0" minWidth="300.0" prefHeight="555.0" prefWidth="300.0" style="-fx-background-color: darkgray;">
+                        <items>
+                            <AnchorPane minHeight="0.0" minWidth="300.0" prefHeight="600.0" prefWidth="300.0" style="-fx-background-color: darkgray;" />
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="356.0" prefWidth="140.0" />
+                        </items>
+                    </SplitPane>
+                    <SplitPane dividerPositions="0.5" prefHeight="600.0" prefWidth="300.0">
+                        <items>
+                            <AnchorPane minHeight="0.0" minWidth="300.0" prefHeight="600.0" prefWidth="300.0" style="-fx-background-color: darkgray;">
+                           <children>
+                              <SplitPane dividerPositions="0.5" layoutX="-2.0" layoutY="1.0" orientation="VERTICAL" prefHeight="552.0" prefWidth="308.0" style="-fx-background-color: darkgray;">
+                                <items>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="269.0" prefWidth="298.0" />
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="136.0" prefWidth="167.0">
+                                       <children>
+                                          <ImageView fitHeight="278.0" fitWidth="308.0" layoutX="-3.0" layoutY="-6.0" pickOnBounds="true" preserveRatio="true" />
+                                       </children>
+                                    </AnchorPane>
+                                </items>
+                              </SplitPane>
+                           </children>
+                            </AnchorPane>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                        </items>
+                    </SplitPane>
+                    <AnchorPane prefHeight="600.0" prefWidth="300.0" style="-fx-background-color: darkgray;">
+                        <children>
+                            <Button fx:id="fiveDayForecastButton2" layoutX="99.0" layoutY="120.0" mnemonicParsing="false" onAction="#switchToFiveDayForecastView" style="-fx-background-color: #6B8E6B;" text="5 Day Forecast">
+                                <font>
+                                    <Font name="Lucida Sans Unicode" size="12.0" />
+                                </font>
+                            </Button>
+                            <Label fx:id="sunRise2" layoutX="14.0" layoutY="447.0" prefHeight="30.0" prefWidth="80.0" text="12:55 AM">
+                                <font>
+                                    <Font name="Lucida Sans Unicode" size="16.0" />
+                                </font>
+                            </Label>
+                            <Label fx:id="sunSet2" alignment="CENTER_RIGHT" layoutX="200.0" layoutY="447.0" prefHeight="30.0" prefWidth="80.0" text="12:55 PM">
+                                <font>
+                                    <Font name="Lucida Sans Unicode" size="16.0" />
+                                </font>
+                            </Label>
+                            <Label fx:id="date2" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="75.0" layoutY="469.0" prefHeight="60.0" prefWidth="147.0" text="September 30, 11:52pm " textAlignment="CENTER" wrapText="true">
+                                <font>
+                                    <Font name="Verdana" size="19.0" />
+                                </font>
+                            </Label>
+                            <Label fx:id="wind2" alignment="CENTER_RIGHT" layoutX="165.0" layoutY="386.0" prefHeight="40.0" prefWidth="115.0" text="555 mph" wrapText="true">
+                                <font>
+                                    <Font name="Verdana" size="16.0" />
+                                </font>
+                            </Label>
+                            <Label fx:id="humid2" layoutX="14.0" layoutY="386.0" prefHeight="40.0" prefWidth="138.0" text="100% Humidity" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS" wrapText="true">
+                                <font>
+                                    <Font name="Verdana" size="16.0" />
+                                </font>
+                            </Label>
+                            <Button fx:id="temp2" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" graphicTextGap="1.0" layoutX="164.0" layoutY="210.0" mnemonicParsing="false" onAction="#toggleTemperatureUnit" prefHeight="80.0" prefWidth="115.0" style="-fx-background-color: #4A9B9B;" text="102˚F" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
+                                <font>
+                                    <Font name="Comic Sans MS" size="36.0" />
+                                </font>
+                                <padding>
+                                    <Insets left="-2.0" />
+                                </padding>
+                                <opaqueInsets>
+                                    <Insets />
+                                </opaqueInsets>
+                            </Button>
+                            <Label fx:id="name2" alignment="CENTER" layoutX="9.0" layoutY="51.0" prefHeight="60.0" prefWidth="278.0" text="Calsbad, CA">
+                                <font>
+                                    <Font name="Tahoma" size="30.0" />
+                                </font>
+                            </Label>
+                            <ImageView fx:id="weatherIcon2" fitHeight="125.0" fitWidth="125.0" layoutX="11.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true" />
+                            <Label fx:id="description2" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="3.0" layoutY="286.0" prefHeight="72.0" prefWidth="138.0" text="scattered clouds with wind warnings" textAlignment="CENTER" wrapText="true">
+                                <font>
+                                    <Font name="Comic Sans MS" size="16.0" />
+                                </font>
+                            </Label>
+                            <Label fx:id="sunriseLabel2" layoutX="21.0" layoutY="519.0" text="Sunrise">
+                                <font>
+                                    <Font name="Comic Sans MS" size="16.0" />
+                                </font>
+                            </Label>
+                            <Label fx:id="sunsetLabel2" layoutX="220.0" layoutY="519.0" text="Sunset">
+                                <font>
+                                    <Font name="Comic Sans MS" size="16.0" />
+                                </font>
+                            </Label>
+                        </children>
+                    </AnchorPane>
+                </children>
+            </HBox>
+        </children>
+    </AnchorPane>
+</items>
+</SplitPane>
